bases/infra/multicluster/headscale/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: headscale
    app.kubernetes.io/name: headscale
    app.kubernetes.io/service: headscale
  name: headscale
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: ui
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: headscale
    app.kubernetes.io/name: headscale
  type: ClusterIP
